monitoring/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: monitoring-gateway
  hostnames:
    - "grafana.lan"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
  hostnames:
    - "prometheus.lan"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-route
  namespace: monitoring
spec:
  parentRefs:
    - name: monitoring-gateway
  hostnames:
    - "alertmanager.lan"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
